BUG/literary-realms-not-visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,6 +391,7 @@ body {
 
 .section {
   padding-block: var(--section-padding);
+  margin-top: 70px;
 }
 
 .section-subtitle {
